--- a/CoviCURE/Forms/Hospital/hospitals.ui
+++ b/CoviCURE/Forms/Hospital/hospitals.ui
@@ -100,7 +100,7 @@ border-radius: 20px;</string>
       </sizepolicy>
      </property>
      <property name="text">
-      <string>PushButton</string>
+      <string>hos9</string>
      </property>
     </widget>
     <widget class="QPushButton" name="hos4">
@@ -119,7 +119,7 @@ border-radius: 20px;</string>
       </sizepolicy>
      </property>
      <property name="text">
-      <string>PushButton</string>
+      <string>hos4</string>
      </property>
     </widget>
     <widget class="QPushButton" name="hos6">
@@ -138,7 +138,7 @@ border-radius: 20px;</string>
       </sizepolicy>
      </property>
      <property name="text">
-      <string>PushButton</string>
+      <string>hos6</string>
      </property>
     </widget>
     <widget class="QPushButton" name="hos5">
@@ -157,7 +157,7 @@ border-radius: 20px;</string>
       </sizepolicy>
      </property>
      <property name="text">
-      <string>PushButton</string>
+      <string>hos5</string>
      </property>
     </widget>
     <widget class="QPushButton" name="hos7">
@@ -176,7 +176,7 @@ border-radius: 20px;</string>
       </sizepolicy>
      </property>
      <property name="text">
-      <string>PushButton</string>
+      <string>hos7</string>
      </property>
     </widget>
     <widget class="QPushButton" name="hos8">
@@ -195,7 +195,7 @@ border-radius: 20px;</string>
       </sizepolicy>
      </property>
      <property name="text">
-      <string>PushButton</string>
+      <string>hos8</string>
      </property>
     </widget>
     <widget class="QLabel" name="label">
