--- a/CoviCURE/Forms/Hospital/myhospital.ui
+++ b/CoviCURE/Forms/Hospital/myhospital.ui
@@ -242,7 +242,7 @@ color: rgb(255, 255, 255);</string>
       <set>Qt::AlignCenter</set>
      </property>
     </widget>
-    <widget class="QLabel" name="name_2">
+    <widget class="QLabel" name="name_next">
      <property name="geometry">
       <rect>
        <x>510</x>
@@ -326,7 +326,7 @@ color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(0, 10
      <number>3</number>
     </property>
    </widget>
-   <widget class="QLabel" name="email_2">
+   <widget class="QLabel" name="email_next">
     <property name="geometry">
      <rect>
       <x>70</x>
