--- a/CoviPLUS/mainwindow.ui
+++ b/CoviPLUS/mainwindow.ui
@@ -18,7 +18,7 @@
     <property name="geometry">
      <rect>
       <x>60</x>
-      <y>50</y>
+      <y>80</y>
       <width>581</width>
       <height>501</height>
      </rect>
@@ -78,7 +78,7 @@ color: rgb(255, 255, 255);
      <property name="styleSheet">
       <string notr="true">background-color: rgb(255, 255, 255);
 color: rgb(64, 64, 95);
-font: 12pt &quot;Segoe UI&quot;;</string>
+font: 16pt &quot;Segoe UI&quot;;</string>
      </property>
     </widget>
     <widget class="QLabel" name="label">
@@ -91,8 +91,9 @@ font: 12pt &quot;Segoe UI&quot;;</string>
       </rect>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0.210227 rgba(57, 230, 255, 255), stop:1 rgba(165, 0, 198, 255));
-font: 600 16pt &quot;Segoe UI&quot;;</string>
+      <string notr="true">background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(0, 142, 71, 255), stop:1 rgba(0, 78, 104, 255));
+color: rgb(255, 255, 255);
+font: 600 20pt &quot;Segoe UI&quot;;</string>
      </property>
      <property name="text">
       <string>Username</string>
@@ -111,8 +112,9 @@ font: 600 16pt &quot;Segoe UI&quot;;</string>
       </rect>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0.210227 rgba(57, 230, 255, 255), stop:1 rgba(165, 0, 198, 255));
-font: 600 16pt &quot;Segoe UI&quot;;</string>
+      <string notr="true">background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(0, 142, 71, 255), stop:1 rgba(0, 78, 104, 255));
+color: rgb(255, 255, 255);
+font: 600 20pt &quot;Segoe UI&quot;;</string>
      </property>
      <property name="text">
       <string>Password</string>
@@ -133,7 +135,7 @@ font: 600 16pt &quot;Segoe UI&quot;;</string>
      <property name="styleSheet">
       <string notr="true">background-color: rgb(255, 255, 255);
 color: rgb(64, 64, 95);
-font: 12pt &quot;Segoe UI&quot;;</string>
+font: 16pt &quot;Segoe UI&quot;;</string>
      </property>
      <property name="echoMode">
       <enum>QLineEdit::Password</enum>
@@ -149,8 +151,9 @@ font: 12pt &quot;Segoe UI&quot;;</string>
       </rect>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0.210227 rgba(57, 230, 255, 255), stop:1 rgba(165, 0, 198, 255));
-font: 600 16pt &quot;Segoe UI&quot;;</string>
+      <string notr="true">background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(0, 106, 255, 255), stop:1 rgba(0, 255, 138, 255));
+color: rgb(255, 255, 255);
+font: 600 29pt &quot;Segoe UI&quot;;</string>
      </property>
      <property name="text">
       <string>Login</string>
@@ -161,7 +164,7 @@ font: 600 16pt &quot;Segoe UI&quot;;</string>
     <property name="geometry">
      <rect>
       <x>690</x>
-      <y>50</y>
+      <y>80</y>
       <width>541</width>
       <height>501</height>
      </rect>
@@ -203,7 +206,7 @@ color: rgb(255, 255, 255);
 </string>
      </property>
      <property name="text">
-      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;ADMIN LOGIN&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;HOSPITAL LOGIN&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
@@ -215,12 +218,13 @@ color: rgb(255, 255, 255);
        <x>160</x>
        <y>300</y>
        <width>261</width>
-       <height>51</height>
+       <height>61</height>
       </rect>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0.210227 rgba(57, 230, 255, 255), stop:1 rgba(165, 0, 198, 255));
-font: 600 16pt &quot;Segoe UI&quot;;</string>
+      <string notr="true">background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(0, 106, 255, 255), stop:1 rgba(0, 255, 138, 255));
+color: rgb(255, 255, 255);
+font: 600 26pt &quot;Segoe UI&quot;;</string>
      </property>
      <property name="text">
       <string>Login</string>
@@ -230,35 +234,39 @@ font: 600 16pt &quot;Segoe UI&quot;;</string>
      <property name="geometry">
       <rect>
        <x>160</x>
-       <y>410</y>
+       <y>400</y>
        <width>261</width>
-       <height>51</height>
+       <height>61</height>
       </rect>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0.210227 rgba(57, 230, 255, 255), stop:1 rgba(165, 0, 198, 255));
-font: 600 16pt &quot;Segoe UI&quot;;</string>
+      <string notr="true">background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(0, 106, 255, 255), stop:1 rgba(0, 255, 138, 255));
+color: rgb(255, 255, 255);
+font: 600 26pt &quot;Segoe UI&quot;;</string>
      </property>
      <property name="text">
       <string>Close</string>
      </property>
     </widget>
-    <widget class="QLineEdit" name="lineEdit_licence">
+    <widget class="QLineEdit" name="lineEdit_license">
      <property name="geometry">
       <rect>
        <x>160</x>
        <y>210</y>
        <width>261</width>
-       <height>41</height>
+       <height>51</height>
       </rect>
      </property>
      <property name="styleSheet">
       <string notr="true">background-color: rgb(255, 255, 255);
 color: rgb(64, 64, 95);
-font: 12pt &quot;Segoe UI&quot;;</string>
+font: 18pt &quot;Segoe UI&quot;;</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
      </property>
      <property name="placeholderText">
-      <string>  L I C E N C E</string>
+      <string>  L  I  C  E  N  C  E</string>
      </property>
     </widget>
    </widget>
