--- a/CoviCURE/resource.qrc
+++ b/CoviCURE/resource.qrc
@@ -19,5 +19,6 @@
         <file>img/noVaccine.png</file>
         <file>img/print.png</file>
         <file>img/address.png</file>
+        <file>img/5061b5427eb12b6d3f5a86f58875c74d_0_0 (1).png</file>
     </qresource>
 </RCC>
