--- a/CoviCURE/Forms/Hospital/hospdash.ui
+++ b/CoviCURE/Forms/Hospital/hospdash.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1200</width>
+    <width>1250</width>
     <height>700</height>
    </rect>
   </property>
@@ -17,10 +17,10 @@
    <widget class="QGroupBox" name="groupBox">
     <property name="geometry">
      <rect>
-      <x>50</x>
-      <y>60</y>
-      <width>1181</width>
-      <height>531</height>
+      <x>20</x>
+      <y>50</y>
+      <width>1241</width>
+      <height>561</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -33,10 +33,10 @@ border-radius: 30px;</string>
     <widget class="QPushButton" name="pushVirtualdoctor">
      <property name="geometry">
       <rect>
-       <x>790</x>
-       <y>40</y>
-       <width>341</width>
-       <height>221</height>
+       <x>840</x>
+       <y>60</y>
+       <width>361</width>
+       <height>241</height>
       </rect>
      </property>
      <property name="sizePolicy">
@@ -46,16 +46,16 @@ border-radius: 30px;</string>
       </sizepolicy>
      </property>
      <property name="text">
-      <string>Virual Doctor</string>
+      <string>V I R T U A L  R . C . T</string>
      </property>
     </widget>
     <widget class="QPushButton" name="pushAppointment">
      <property name="geometry">
       <rect>
-       <x>410</x>
-       <y>40</y>
-       <width>351</width>
-       <height>221</height>
+       <x>440</x>
+       <y>60</y>
+       <width>361</width>
+       <height>241</height>
       </rect>
      </property>
      <property name="sizePolicy">
@@ -65,16 +65,16 @@ border-radius: 30px;</string>
       </sizepolicy>
      </property>
      <property name="text">
-      <string>Book an Appointment</string>
+      <string>A P P O I N T M E N T</string>
      </property>
     </widget>
     <widget class="QPushButton" name="pushHospitals">
      <property name="geometry">
       <rect>
        <x>40</x>
-       <y>40</y>
-       <width>341</width>
-       <height>221</height>
+       <y>60</y>
+       <width>361</width>
+       <height>241</height>
       </rect>
      </property>
      <property name="sizePolicy">
@@ -83,17 +83,20 @@ border-radius: 30px;</string>
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1, stop:0.153409 rgba(0, 98, 197, 255), stop:0.857955 rgba(0, 207, 60, 255));</string>
+     </property>
      <property name="text">
-      <string>Availabe Hospitals</string>
+      <string>H O S P I T A L S</string>
      </property>
     </widget>
     <widget class="QPushButton" name="pushDashboard">
      <property name="geometry">
       <rect>
-       <x>420</x>
-       <y>430</y>
+       <x>450</x>
+       <y>400</y>
        <width>341</width>
-       <height>61</height>
+       <height>91</height>
       </rect>
      </property>
      <property name="sizePolicy">
@@ -113,7 +116,7 @@ border-radius: 30px;</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1200</width>
+     <width>1250</width>
      <height>17</height>
     </rect>
    </property>
