--- a/CoviCURE/Forms/Main/home.ui
+++ b/CoviCURE/Forms/Main/home.ui
@@ -1,40 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Dashboard</class>
- <widget class="QMainWindow" name="Dashboard">
+ <class>Home</class>
+ <widget class="QMainWindow" name="Home">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1260</width>
-    <height>700</height>
+    <width>1300</width>
+    <height>800</height>
    </rect>
   </property>
-  <property name="sizePolicy">
-   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-    <horstretch>0</horstretch>
-    <verstretch>0</verstretch>
-   </sizepolicy>
-  </property>
   <property name="windowTitle">
-   <string>Dashboard</string>
-  </property>
-  <property name="windowIcon">
-   <iconset resource="../../resource.qrc">
-    <normaloff>:/resources/img/mask.png</normaloff>:/resources/img/mask.png</iconset>
-  </property>
-  <property name="styleSheet">
-   <string notr="true">background-color: rgb(173, 181, 189);</string>
+   <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <property name="styleSheet">
-    <string notr="true"/>
-   </property>
    <widget class="QGroupBox" name="groupBox">
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>0</y>
+      <y>20</y>
       <width>1241</width>
       <height>651</height>
      </rect>
@@ -196,7 +180,7 @@ border-radius: 10px;</string>
       <string>Vaccination</string>
      </property>
     </widget>
-    <widget class="QLabel" name="label_dashboard">
+    <widget class="QLabel" name="label_home">
      <property name="geometry">
       <rect>
        <x>30</x>
@@ -206,7 +190,8 @@ border-radius: 10px;</string>
       </rect>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(31, 174, 126, 255), stop:1 rgba(97, 167, 209, 255));</string>
+      <string notr="true">background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(31, 174, 126, 255), stop:1 rgba(97, 167, 209, 255));
+image: url(:/resources/img/CoviCURE.png);</string>
      </property>
      <property name="text">
       <string/>
@@ -219,33 +204,13 @@ border-radius: 10px;</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1260</width>
+     <width>1300</width>
      <height>17</height>
     </rect>
    </property>
-   <widget class="QMenu" name="menuFile">
-    <property name="title">
-     <string>File</string>
-    </property>
-    <addaction name="separator"/>
-    <addaction name="actionClose_2"/>
-   </widget>
-   <addaction name="menuFile"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
-  <action name="actionClose">
-   <property name="text">
-    <string>Close</string>
-   </property>
-  </action>
-  <action name="actionClose_2">
-   <property name="text">
-    <string>Close</string>
-   </property>
-  </action>
  </widget>
- <resources>
-  <include location="../../resource.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
