--- a/CoviCURE/Forms/Main/dashboard.ui
+++ b/CoviCURE/Forms/Main/dashboard.ui
@@ -40,7 +40,7 @@
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(0, 213, 255, 255), stop:1 rgba(255, 0, 106, 255));
+     <string notr="true">background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1, stop:0.153409 rgba(0, 145, 174, 255), stop:1 rgba(184, 50, 50, 255));
 border-radius: 10px;</string>
     </property>
     <property name="title">
@@ -206,7 +206,7 @@ border-radius: 10px;</string>
       </rect>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(31, 174, 126, 255), stop:1 rgba(97, 167, 209, 255));</string>
+      <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(0, 184, 221, 255), stop:0.971591 rgba(0, 205, 137, 255));</string>
      </property>
      <property name="text">
       <string/>
