--- a/CoviCURE/Forms/Main/mainwindow.ui
+++ b/CoviCURE/Forms/Main/mainwindow.ui
@@ -27,7 +27,7 @@
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(0, 213, 255, 255), stop:1 rgba(255, 0, 106, 255));
+     <string notr="true">background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1, stop:0.153409 rgba(0, 145, 174, 255), stop:1 rgba(184, 50, 50, 255));
 border-radius: 20px;</string>
     </property>
     <property name="title">
@@ -50,6 +50,7 @@ border-radius: 20px;</string>
      </property>
      <property name="font">
       <font>
+       <family>Arial Rounded MT Bold</family>
        <pointsize>14</pointsize>
        <italic>false</italic>
        <bold>false</bold>
@@ -83,6 +84,7 @@ color: rgb(255, 255, 255);</string>
      </property>
      <property name="font">
       <font>
+       <family>Arial Rounded MT Bold</family>
        <pointsize>14</pointsize>
        <italic>false</italic>
        <bold>false</bold>
@@ -116,6 +118,7 @@ color: rgb(255, 255, 255);</string>
      </property>
      <property name="font">
       <font>
+       <family>Arial Rounded MT Bold</family>
        <pointsize>14</pointsize>
        <italic>false</italic>
        <bold>false</bold>
@@ -142,6 +145,7 @@ color: rgb(255, 255, 255);</string>
      </property>
      <property name="font">
       <font>
+       <family>Segoe UI</family>
        <pointsize>30</pointsize>
        <italic>false</italic>
        <bold>true</bold>
