--- a/CoviCURE/Forms/Rapidcovid/quepage1.ui
+++ b/CoviCURE/Forms/Rapidcovid/quepage1.ui
@@ -26,7 +26,7 @@
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(0, 213, 255, 255), stop:1 rgba(255, 0, 106, 255));
+    <string notr="true">background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1, stop:0.153409 rgba(0, 145, 174, 255), stop:1 rgba(184, 50, 50, 255));
 border-radius: 20px;</string>
    </property>
    <property name="title">
@@ -47,9 +47,9 @@ border-radius: 20px;</string>
     <property name="font">
      <font>
       <family>Segoe UI</family>
-      <pointsize>36</pointsize>
+      <pointsize>30</pointsize>
       <italic>false</italic>
-      <bold>true</bold>
+      <bold>false</bold>
       <strikeout>false</strikeout>
      </font>
     </property>
@@ -60,13 +60,13 @@ border-radius: 20px;</string>
      <bool>false</bool>
     </property>
     <property name="styleSheet">
-     <string notr="true">font: 600 36pt &quot;Segoe UI&quot;;
+     <string notr="true">font: 300 30pt &quot;Segoe UI&quot;;
 color: rgb(255, 255, 255);
 
 </string>
     </property>
     <property name="text">
-     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Choose Your Age Group:&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:28pt; font-weight:400;&quot;&gt;Choose Your Age Group:&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
@@ -75,7 +75,7 @@ color: rgb(255, 255, 255);
    <widget class="QPushButton" name="que1_opt1">
     <property name="geometry">
      <rect>
-      <x>20</x>
+      <x>30</x>
       <y>120</y>
       <width>231</width>
       <height>51</height>
@@ -90,7 +90,7 @@ color: rgb(255, 255, 255);
     <property name="styleSheet">
      <string notr="true">font: 600  20pt &quot;Segoe UI&quot;;
 color: rgb(255, 255, 255);
-background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0.210227 rgba(57, 230, 255, 255), stop:1 rgba(165, 0, 198, 255));
+background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0.130682 rgba(0, 255, 96, 255), stop:0.909091 rgba(0, 225, 169, 255));
 border-radius: 10px;</string>
     </property>
     <property name="text">
@@ -100,7 +100,7 @@ border-radius: 10px;</string>
    <widget class="QPushButton" name="que1_opt2">
     <property name="geometry">
      <rect>
-      <x>300</x>
+      <x>310</x>
       <y>120</y>
       <width>231</width>
       <height>51</height>
@@ -125,7 +125,7 @@ border-radius: 10px;</string>
    <widget class="QPushButton" name="que1_opt3">
     <property name="geometry">
      <rect>
-      <x>580</x>
+      <x>600</x>
       <y>120</y>
       <width>231</width>
       <height>51</height>
@@ -150,7 +150,7 @@ border-radius: 10px;</string>
    <widget class="QPushButton" name="que1_opt4">
     <property name="geometry">
      <rect>
-      <x>860</x>
+      <x>880</x>
       <y>120</y>
       <width>231</width>
       <height>51</height>
@@ -184,9 +184,9 @@ border-radius: 10px;</string>
     <property name="font">
      <font>
       <family>Segoe UI</family>
-      <pointsize>36</pointsize>
+      <pointsize>30</pointsize>
       <italic>false</italic>
-      <bold>true</bold>
+      <bold>false</bold>
       <strikeout>false</strikeout>
      </font>
     </property>
@@ -197,13 +197,13 @@ border-radius: 10px;</string>
      <bool>false</bool>
     </property>
     <property name="styleSheet">
-     <string notr="true">font: 600 36pt &quot;Segoe UI&quot;;
+     <string notr="true">font: 300 30pt &quot;Segoe UI&quot;;
 color: rgb(255, 255, 255);
 
 </string>
     </property>
     <property name="text">
-     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Choose Your Body Temperature Range:&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:28pt; font-weight:400;&quot;&gt;Choose Your Body Temperature Range:&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
@@ -227,7 +227,7 @@ color: rgb(255, 255, 255);
     <property name="styleSheet">
      <string notr="true">font: 600  20pt &quot;Segoe UI&quot;;
 color: rgb(255, 255, 255);
-background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0.210227 rgba(57, 230, 255, 255), stop:1 rgba(165, 0, 198, 255));
+background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0.255682 rgba(0, 145, 193, 255), stop:1 rgba(0, 75, 225, 255));
 border-radius: 10px;</string>
     </property>
     <property name="text">
@@ -321,9 +321,9 @@ border-radius: 10px;</string>
     <property name="font">
      <font>
       <family>Segoe UI</family>
-      <pointsize>36</pointsize>
+      <pointsize>30</pointsize>
       <italic>false</italic>
-      <bold>true</bold>
+      <bold>false</bold>
       <strikeout>false</strikeout>
      </font>
     </property>
@@ -334,13 +334,13 @@ border-radius: 10px;</string>
      <bool>false</bool>
     </property>
     <property name="styleSheet">
-     <string notr="true">font: 600 36pt &quot;Segoe UI&quot;;
+     <string notr="true">font: 300 30pt &quot;Segoe UI&quot;;
 color: rgb(255, 255, 255);
 
 </string>
     </property>
     <property name="text">
-     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Select Your Gender:&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:28pt; font-weight:400;&quot;&gt;Select Your Gender:&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
@@ -400,9 +400,9 @@ border-radius: 10px;</string>
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>600</y>
+      <y>590</y>
       <width>191</width>
-      <height>41</height>
+      <height>51</height>
      </rect>
     </property>
     <property name="sizePolicy">
@@ -433,9 +433,9 @@ color: rgb(255, 255, 255);</string>
     <property name="geometry">
      <rect>
       <x>930</x>
-      <y>600</y>
+      <y>590</y>
       <width>191</width>
-      <height>41</height>
+      <height>51</height>
      </rect>
     </property>
     <property name="sizePolicy">
