--- a/CoviCURE/Forms/Rapidcovid/rapidcovid.ui
+++ b/CoviCURE/Forms/Rapidcovid/rapidcovid.ui
@@ -43,7 +43,7 @@
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(0, 213, 255, 255), stop:1 rgba(255, 0, 106, 255));
+     <string notr="true">background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1, stop:0.153409 rgba(0, 145, 174, 255), stop:1 rgba(184, 50, 50, 255));
 border-radius: 20px;</string>
     </property>
     <property name="title">
@@ -60,6 +60,7 @@ border-radius: 20px;</string>
      </property>
      <property name="font">
       <font>
+       <family>Segoe UI</family>
        <pointsize>36</pointsize>
        <italic>false</italic>
        <bold>true</bold>
@@ -102,8 +103,9 @@ color: rgb(255, 255, 255);
      </property>
      <property name="styleSheet">
       <string notr="true">font: 26pt &quot;Cooper Black&quot;;
+background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(0, 184, 221, 255), stop:0.971591 rgba(0, 205, 137, 255));
 color: rgb(255, 255, 255);
-background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0.210227 rgba(57, 230, 255, 255), stop:1 rgba(165, 0, 198, 255));
+
 border-radius: 10px;</string>
      </property>
      <property name="text">
